[package]
name = "vkgen"
version = "0.1.0"
authors = ["Usman Zahid <usmanzahid1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"

[profile.dev]
opt-level = 1

[profile.release]
debug = true
lto = "fat"
